--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
     <title>RTB House</title>
+
+    <meta name="description" content="Program that fetches data from a json file and shows it in a table." />
+    <meta property="og:title" content="RTB House" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rtb-house-test.netlify.app/" />
+    <meta property="og:image" content="https://rtb-house-test.netlify.app/og-image.png" />
   </head>
   <body>
     <div id="root" class="root"></div>
