Add og description meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <meta name="description" content="Program that fetches data from a json file and shows it in a table." />
     <meta property="og:title" content="RTB House" />
+    <meta property="og:description" content="Program that fetches data from a json file and shows it in a table.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://rtb-house-test.netlify.app/" />
     <meta property="og:image" content="https://rtb-house-test.netlify.app/og-image.png" />
